--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -65,7 +65,8 @@ input[type=checkbox]
     <form action="#" th:action="@{/graph/selection}" th:object="${arrayString}" method="post">
         <div class="form-group required-control">
             <h2>Selection Sort</h2>
-            <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+            <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
+            <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
             <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
             <span class="checkboxtext">
               Ascending Order
@@ -77,7 +78,8 @@ input[type=checkbox]
 <form action="#" th:action="@{/graph/bubble}" th:object="${arrayString}" method="post">
     <div class="form-group required-control">
         <h2>Bubble Sort</h2>
-        <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
         <span class="checkboxtext">
               Ascending Order
@@ -89,7 +91,8 @@ input[type=checkbox]
 <form action="#" th:action="@{/graph/insertion}" th:object="${arrayString}" method="post">
     <div class="form-group required-control">
         <h2>Insertion Sort</h2>
-        <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
+        <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
         <span class="checkboxtext">
               Ascending Order
@@ -101,7 +104,8 @@ input[type=checkbox]
 <form action="#" th:action="@{/graph/merge}" th:object="${arrayString}" method="post">
     <div class="form-group required-control">
         <h2>Merge Sort</h2>
-        <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
+        <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
         <span class="checkboxtext">
               Ascending Order
@@ -113,7 +117,8 @@ input[type=checkbox]
 <form action="#" th:action="@{/graph/quick}" th:object="${arrayString}" method="post">
     <div class="form-group required-control">
         <h2>Quick Sort</h2>
-        <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
+        <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
         <span class="checkboxtext">
               Ascending Order
@@ -126,7 +131,7 @@ input[type=checkbox]
 <form action="#" th:action="@{/metrics/all}" th:object="${arrayString}" method="post">
     <div class="form-group required-control">
         <h2>Compare All Algorithms</h2>
-        <input type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
+        <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
         <span class="checkboxtext">
               Ascending Order
