--- a/src/main/resources/templates/google-charts.html
+++ b/src/main/resources/templates/google-charts.html
@@ -7,17 +7,18 @@
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link th:href="@{/styles/css/google-charts.css}" rel="stylesheet">
     <script type="text/javascript"
             src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
 <h1>Sorting Visualizer</h1>
+<div>
+    <h4>Sorted Values</h4>
+    <h4 th:text="${sorted}"></h4>
+</div>
 <div align="center" style="width: 1000px;" th:each="data, iterstat: ${steps}">
     <div th:id="${iterstat.index}" ></div>
-</div>
-<div>
-    <h2>Sorted Values</h2>
-    <h2 th:text="${sorted}"></h2>
 </div>
 <script th:inline="javascript">
         var algorithm_name = /*[[${algorithm}]]*/'noValue';
@@ -58,5 +59,41 @@
 
         }
     </script>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6>About</h6>
+                <p class="text-justify">Sorting Algorithm API Visualizer is a Spring Boot API that provides a quick way to sort data using different algorithms. The purpose of this project is to provide insight into different metrics from different algorithms to help the end user identify which algorithm would be best suited for their particular use case. Visualization is also possible through UI built with Thyme Leaf.</p>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <h6>About Me</h6>
+                <ul class="footer-links">
+                    <li><a href="https://andrestoledotech.com">Portfolio Website</a></li>
+                </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+                <h6>Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithm-API-Visualizer">Project Github</a></li>
+                    <li><a href="/swagger-ui.html">Swagger UI</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithms/wiki">Wiki</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="#">Andres Toledo</a>.
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
