--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,67 +3,13 @@
 <head>
     <meta charset="ISO-8859-1">
     <title></title>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link th:href="@{/styles/css/home.css}" rel="stylesheet">
 </head>
-<style>
-input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-input[type=submit] {
-  width: 100%;
-  background-color: #4285F4;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  opacity: 0.8;
-}
-
-div {
-  border-radius: 5px;
-  background-color: #FFFFFF;
-  padding-left: 20%;
-  padding-right: 20%;
-}
-
-h2,h1{
-  text-align: center;
-  }
-
-input[type=checkbox]
-{
-  -ms-transform: scale(2); /* IE */
-  -moz-transform: scale(2); /* FF */
-  -webkit-transform: scale(2); /* Safari and Chrome */
-  -o-transform: scale(2); /* Opera */
-  transform: scale(2);
-  padding: 10px;
-  margin-left: 10px;
-}
-.checkboxtext
-{
-  padding-left: 30px;
-  font-size: 150%;
-  display: inline;
-}
-</style>
 <body>
 <h1>Sorting Visualizer</h1>
     <form action="#" th:action="@{/graph/selection}" th:object="${arrayString}" method="post">
-        <div class="form-group required-control">
+        <div class="form-group required-control form-input">
             <h2>Selection Sort</h2>
             <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
             <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
@@ -76,7 +22,7 @@ input[type=checkbox]
     </form>
 
 <form action="#" th:action="@{/graph/bubble}" th:object="${arrayString}" method="post">
-    <div class="form-group required-control">
+    <div class="form-group required-control form-input">
         <h2>Bubble Sort</h2>
         <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}" />
         <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
@@ -89,7 +35,7 @@ input[type=checkbox]
 </form>
 
 <form action="#" th:action="@{/graph/insertion}" th:object="${arrayString}" method="post">
-    <div class="form-group required-control">
+    <div class="form-group required-control form-input">
         <h2>Insertion Sort</h2>
         <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
         <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
@@ -102,7 +48,7 @@ input[type=checkbox]
 </form>
 
 <form action="#" th:action="@{/graph/merge}" th:object="${arrayString}" method="post">
-    <div class="form-group required-control">
+    <div class="form-group required-control form-input">
         <h2>Merge Sort</h2>
         <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
         <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
@@ -115,7 +61,7 @@ input[type=checkbox]
 </form>
 
 <form action="#" th:action="@{/graph/quick}" th:object="${arrayString}" method="post">
-    <div class="form-group required-control">
+    <div class="form-group required-control form-input">
         <h2>Quick Sort</h2>
         <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
         <div class="alert alert-warning" th:if="${#fields.hasErrors('array')}" th:errors="*{array}"></div>
@@ -129,7 +75,7 @@ input[type=checkbox]
 
 
 <form action="#" th:action="@{/metrics/all}" th:object="${arrayString}" method="post">
-    <div class="form-group required-control">
+    <div class="form-group required-control form-input">
         <h2>Compare All Algorithms</h2>
         <input class="form-control" type="text" placeholder="Example: 1,2,3,4,5,..." th:field="*{array}"/>
         <input type="checkbox" name="ascending" th:checked="*{ascending}"/>
@@ -140,8 +86,41 @@ input[type=checkbox]
     </div>
 </form>
 
-<div align="center" style="width: 1000px;" th:each="data, iterstat: ${steps}">
-    <div th:id="${iterstat.index}" ></div>
-</div>
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6>About</h6>
+                <p class="text-justify">Sorting Algorithm API Visualizer is a Spring Boot API that provides a quick way to sort data using different algorithms. The purpose of this project is to provide insight into different metrics from different algorithms to help the end user identify which algorithm would be best suited for their particular use case. Visualization is also possible through UI built with Thyme Leaf.</p>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <h6>About Me</h6>
+                <ul class="footer-links">
+                    <li><a href="https://andrestoledotech.com">Portfolio Website</a></li>
+                </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+                <h6>Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithm-API-Visualizer">Project Github</a></li>
+                    <li><a href="/swagger-ui.html">Swagger UI</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithms/wiki">Wiki</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="#">Andres Toledo</a>.
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
