--- a/src/main/resources/templates/metrics.html
+++ b/src/main/resources/templates/metrics.html
@@ -7,37 +7,10 @@
             src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link th:href="@{/styles/css/metrics.css}" rel="stylesheet">
     <script type="text/javascript"
             src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
-<style>
-#responses-table {
-  font-family: Arial, Helvetica, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#responses-table td, #responses-table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-#responses-table tr:nth-child(even){background-color: #f2f2f2;}
-
-#responses-table tr:hover {background-color: #ddd;}
-
-#responses-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #4285F4;
-  color: white;
-}
-
-h1,h4{
-  text-align: center;
-  }
-</style>
 <body>
 <h1>Sorting Visualizer</h1>
 <h4>Sorted Values</h4>
@@ -64,5 +37,42 @@ h1,h4{
         </tr>
     </table>
 </div>
+
+<footer class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 col-md-6">
+                <h6>About</h6>
+                <p class="text-justify">Sorting Algorithm API Visualizer is a Spring Boot API that provides a quick way to sort data using different algorithms. The purpose of this project is to provide insight into different metrics from different algorithms to help the end user identify which algorithm would be best suited for their particular use case. Visualization is also possible through UI built with Thyme Leaf.</p>
+            </div>
+            <div class="col-xs-6 col-md-3">
+                <h6>About Me</h6>
+                <ul class="footer-links">
+                    <li><a href="https://andrestoledotech.com">Portfolio Website</a></li>
+                </ul>
+            </div>
+
+            <div class="col-xs-6 col-md-3">
+                <h6>Quick Links</h6>
+                <ul class="footer-links">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithm-API-Visualizer">Project Github</a></li>
+                    <li><a href="/swagger-ui.html">Swagger UI</a></li>
+                    <li><a href="https://github.com/amtamusic/Sorting-Algorithms/wiki">Wiki</a></li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+                <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
+                    <a href="#">Andres Toledo</a>.
+                </p>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
