--- a/src/main/resources/templates/metrics.html
+++ b/src/main/resources/templates/metrics.html
@@ -19,7 +19,7 @@
     <table id="responses-table">
         <tr>
             <th>Algorithm:</th>
-            <th>Step:</th>
+            <th>Steps:</th>
             <th>Time (ms):</th>
             <th>Swaps:</th>
             <th>Best</th>
